<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemEntry">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="660dp">

        <LinearLayout
            android:id="@+id/desription1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="660dp">

                <ImageButton
                    android:id="@+id/imagebutton"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <EditText
                    android:id="@+id/itemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="422dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="323dp"
                    android:gravity="start|top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine" />

                <Spinner
                    android:id="@+id/locationSpinner"
                    android:layout_width="302dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="233dp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="173dp" />

                <Button
                    android:id="@+id/buttonFound"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="55dp"
                    android:background="#F4282D"
                    android:text="@string/submit"
                    android:textColor="#F2F2F2" />

                <Button
                    android:id="@+id/allLocationButton"
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="230dp"
                    android:text="?" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>